--- a/index.html
+++ b/index.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div id="main">
 
-	<div class="nicePanel">
-		<h1>Create a reader's XML</h1>
-		<form id="readerXML">
-    	<input type="text" placeholder="Username" name="username"> <br/> 
-    	<input type="text" placeholder="Password" name="password"> <br/>
-    	<input type="text" placeholder="Email" name="email"> <br/> 
-    	<input type="text" placeholder="First Name" name="firstName"> <br/>
-    	<input type="text" placeholder="Last Name" name="lastNames"> <br/> 
-    	<input type="text" placeholder="Number of Devices" name="authorisedDeviceLimit"> <br/>
-  		</form>
+<div id="wrapper">
+
+<div id="logInPrompt" class="roundPane" style="display:none">
+	<h1>Hi there, you aren't logged in.</h1>
+	<h2>To gain access to the REST Client. Please enter your credentials below:</h2>
+	<form id="getAccessKeys">
+		<input type="text" placeholder="What is your name?" name="adminName"/> <br/> 
+		<input type="text" placeholder="API Key?" name="adminApiKey"/> <br/> 
+		<input type="text" placeholder="Shared Secret?" name="adminSharedSecret"/> <br/> 
+		<input type="button" id="getAccessKeysNext" value="Next >>" onclick="grabValues()"/>
+	</form>
+</div>
+
+<div id="toolbar" style="display:none">
+	<h1>Hey there, <span id="adminName"></span>! <a href="#" onclick="logMeOut()" >Logout?</a></h1>
+</div>
+
+<div id="content" style="display:none">
+
+<div class="roundPane" id="readersPane">
+	<h1>Readers</h1>
+	<div id="readersActions" style="display:none">
+
+		<h2>Create a Reader</h2>
+		<h2>Query a Reader</h2>
+		<h2>Update a Reader</h2>
+		<h2>Delate a Reader</h2>
 	</div>
+</div>
+
+
+<div class="roundPane" id="editionsPane">
+	<h1>Editions</h1>
+	<div id="editionsActions" style="display:none">
+		<h2>Create a Reader</h2>
+		<h2>Query a Reader</h2>
+		<h2>Update a Reader</h2>
+		<h2>Delate a Reader</h2>
+	</div>
+</div>
+
+
+<div class="roundPane" id="accessPane">
+	<h1>Access</h1>
+	<div id="accessActions" style="display:none">
+		<h2>Create a Reader</h2>
+		<h2>Query a Reader</h2>
+		<h2>Update a Reader</h2>
+		<h2>Delate a Reader</h2>
+	</div>
+</div>
 
 
 </div>
-<script>
-
-$('#readerXML').change(function (){
-	var readerXml = $("#readerXML").find("input").serialize();
-});
-
-
-
-
-
-
-</script>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/engine.js"></script>
 </body>
 </html>
