looks pretty, no?

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<h2>Create a Reader</h2>
 		<h2>Query a Reader</h2>
 		<h2>Update a Reader</h2>
-		<h2>Delate a Reader</h2>
+		<h2>Delete a Reader</h2>
 	</div>
 </div>
 
@@ -40,10 +40,8 @@
 <div class="roundPane" id="editionsPane">
 	<h1>Editions</h1>
 	<div id="editionsActions" style="display:none">
-		<h2>Create a Reader</h2>
-		<h2>Query a Reader</h2>
-		<h2>Update a Reader</h2>
-		<h2>Delate a Reader</h2>
+		<h2>Query all Edition</h2>
+		<h2>Query an Edition</h2>
 	</div>
 </div>
 
@@ -51,10 +49,12 @@
 <div class="roundPane" id="accessPane">
 	<h1>Access</h1>
 	<div id="accessActions" style="display:none">
-		<h2>Create a Reader</h2>
-		<h2>Query a Reader</h2>
-		<h2>Update a Reader</h2>
-		<h2>Delate a Reader</h2>
+		<h2>Create a permission for a Reader</h2>
+		<h2>Query a permission</h2>
+		<h2>Delete a permission</h2>
+		<h2>Create a subscription period for a Reader</h2>
+		<h2>Query a subscription period</h2>
+		<h2>Delete a permission</h2>
 	</div>
 </div>
 
