add expanding panels

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 <div id="content" style="display:none">
 
 <div class="roundPane" id="readersPane">
-	<h1>Readers</h1>
+	<h1 class="clickable">Readers</h1>
 	<div id="readersActions" style="display:none">
-
-		<h2>Create a Reader</h2>
-		<h2>Query a Reader</h2>
-		<h2>Update a Reader</h2>
-		<h2>Delete a Reader</h2>
+		<a href="#" onclick="createReader()"><h2>Create a Reader</h2></a>
+		<a href="#" onclick="queryReader()"><h2>Query a Reader</h2></a>
+		<a href="#" onclick="updateReader()"><h2>Update a Reader</h2></a>
+		<a href="#" onclick="deleteReader()"><h2>Delete a Reader</h2></a>
 	</div>
+	<div id="readersHTML"></div>
 </div>
 
 
 <div class="roundPane" id="editionsPane">
-	<h1>Editions</h1>
+	<h1 class="clickable">Editions</h1>
 	<div id="editionsActions" style="display:none">
 		<h2>Query all Edition</h2>
 		<h2>Query an Edition</h2>
@@ -47,7 +47,7 @@
 
 
 <div class="roundPane" id="accessPane">
-	<h1>Access</h1>
+	<h1 class="clickable">Access</h1>
 	<div id="accessActions" style="display:none">
 		<h2>Create a permission for a Reader</h2>
 		<h2>Query a permission</h2>
